[metadata]
description-file = README.md
license_file = LICENSE

[bdist_wheel]
universal = 1

[isort]
default_section = THIRDPARTY
known_first_party = ansibledoctor
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
force_single_line = true
line_length = 120
skip_glob = **/env/*

[tool:pytest]
filterwarnings =
    ignore::FutureWarning
    ignore:.*collections.*:DeprecationWarning
    ignore:.*pep8.*:FutureWarning
