[metadata]
description-file = README.md
license_file = LICENSE

[bdist_wheel]
universal = 1

[isort]
default_section = THIRDPARTY
known_first_party = ansibledoctor
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
force_single_line = true
line_length = 99
skip_glob = **/.env*,**/env/*,**/docs/*

[yapf]
based_on_style = google
column_limit = 99
dedent_closing_brackets = true
coalesce_brackets = true
split_before_logical_operator = true

[tool:pytest]
filterwarnings =
    ignore::FutureWarning
    ignore:.*collections.*:DeprecationWarning
    ignore:.*pep8.*:FutureWarning

[coverage:run]
omit = **/test/*
